Removed all references and discussions of sequences except in the Modules section which I know David has already changed.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10339 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/spec/Classes.tex
+++ b/spec/Classes.tex
@@ -169,9 +169,9 @@ is \chpl{c}.
 \index{classes!indexing}
 
 A method declared with the name \chpl{this} allows a class to be
-``indexed'' similarly to how a tuple, sequence, or array is indexed.
-Indexing into a class has the semantics of calling a method on the
-class named \chpl{this}.  There is no other way to call a method
+``indexed'' similarly to how an array is indexed.  Indexing into a
+class has the semantics of calling a method on the class
+named \chpl{this}.  There is no other way to call a method
 called \chpl{this}.  The \chpl{this} method must be declared with
 parentheses even if the argument list is empty.
 
