--- a/spec/Input_and_Output.tex
+++ b/spec/Input_and_Output.tex
@@ -179,14 +179,10 @@ separate other dimensions.
 {\bf domains} Outputs the dimensions of the domain enclosed
 by \chpl{[} and \chpl{]}.
 \item
-{\bf sequences} Outputs the elements of the sequence in order
-delimited by the sequence delimiters \chpl{(/} and \chpl{/)} and
-separated by commas.
-\item
-{\bf arithmetic sequences} Outputs the lower bound of the sequence
-followed by \chpl{..} followed by the upper bound of the sequence.  If
-the stride of the sequence is not one, the output is additionally
-followed by the word \chpl{by} followed by the stride of the sequence.
+{\bf ranges} Outputs the lower bound of the range followed
+by \chpl{..} followed by the upper bound of the range.  If the stride
+of the range is not one, the output is additionally followed by the
+word \chpl{by} followed by the stride of the range.
 \item
 {\bf tuples} Outputs the components of the tuple in order delimited
 by \chpl{(} and \chpl{)}, and separated by commas.
