--- a/spec/Locality_and_Distribution.tex
+++ b/spec/Locality_and_Distribution.tex
@@ -132,9 +132,8 @@ locale.
 \label{On_and_Iterators}
 \index{iterators!on@\chpl{on}}
 
-When a loop iterates over a sequence specified by an iterator,
-on-statements inside the iterator control where the corresponding loop
-body is executed.
+When a loop iterates over an iterator, on-statements inside the
+iterator control where the corresponding loop body is executed.
 
 \begin{example}
 An iterator over a distributed tree might include an iterator over the
