--- a/spec/Reductions_and_Scans.tex
+++ b/spec/Reductions_and_Scans.tex
@@ -20,7 +20,7 @@ reduce-scan-operator: one of
 \end{syntax}
 
 The expression on the right-hand side of the reduction can be of any
-type that can be iterated over, {\em e.g.}, a sequence or array.
+type that can be iterated over.
 
 The built-in reductions are defined in \sntx{reduce-scan-operator}.  These
 include, in order, sum, product, logical and, logical or, bitwise and,
@@ -41,7 +41,7 @@ scan-expression:
 \end{syntax}
 
 The expression on the right-hand side of the scan can be of any
-type that can be iterated over, {\em e.g.}, a sequence or array.
+type that can be iterated over.
 
 The built-in scans are defined in \sntx{reduce-scan-operator}.  These
 are identical to the built-in reductions and are described
