--- a/spec/Variables.tex
+++ b/spec/Variables.tex
@@ -91,7 +91,7 @@ are as follows:
 enums & first enum constant \\
 classes & {\tt nil} \\
 records & default constructed record \\
-sequences & empty sequence \\
+ranges & an empty range \\
 arrays & elements are default values \\
 tuples & components are default values \\
 \hline
