--- a/spec/chapel_listing.tex
+++ b/spec/chapel_listing.tex
@@ -15,7 +15,7 @@
       of, on, opaque, ordered, otherwise, out,
       param, pragma,
       real, record, reduce, return,
-      scan, select, seq, serial, single, sparse, string, sync,
+      scan, select, serial, single, sparse, string, sync,
       then, true, type,
       uint, union, use,
       var,
