--- a/spec/Language_Overview.tex
+++ b/spec/Language_Overview.tex
@@ -136,7 +136,7 @@ This summary is not intended to give a complete description of each feature.
 Rather, it should give the reader a map to the rest of the specification
 document.  
 
-\subsubsection{Getting Started}
+\subsubsection{Chapel Programming Basics}
 \paragraph{Hello World} 
 A Chapel version of the standard ``hello world'' computation is given
 here:
@@ -214,46 +214,31 @@ type is used.
 \begin{center}
 \begin{tabular}{|l|l|l|l|}
 \hline
-& & & \\
 {\bf Type} & {\bf Default Size} & {\bf Types with Specified Sizes} & {\bf Default Initial Value}\\
-& & & \\
 \hline
-& & & \\
 \chpl{int} & 32 bits &
 \chpl{int(8)}, \chpl{int(16)}, \chpl{int(32)}, \chpl{int(64)} &
 \chpl{0} \\
-& & & \\
 \hline
-& & & \\
 \chpl{uint} & 32 bits &
 \chpl{uint(8)}, \chpl{uint(16)}, \chpl{uint(32)}, \chpl{uint(64)} &
 \chpl{0} \\
-& & & \\
 \hline
-& & & \\
 \chpl{real} & 64 bits &
 \chpl{real(32)}, \chpl{real(64)}, \chpl{real(128)} &
 \chpl{0.0} \\
-& & & \\
 \hline
-& & & \\
 \chpl{imag} & 64 bits &
 \chpl{imag(32)}, \chpl{imag(64)}, \chpl{imag(128)} &
 \chpl{0.0i} \\
-& & & \\
 \hline
-& & & \\
 \chpl{complex} & 128 bits &
 \chpl{complex(64)}, \chpl{complex(128)}, \chpl{complex(256)} &
 \chpl{0.0 + 0.0i} \\
-& & & \\
 \hline
-& & & \\
 \chpl{bool} & 1 bit & &
 \chpl{false} \\
-& & & \\
 \hline
-& & & \\
 \chpl{string} & unbounded & &
 \chpl{""} \\
 \hline
@@ -266,43 +251,24 @@ with their default initial values for variables of that type.
 \begin{center}
 \begin{tabular}{|l|l|}
 \hline
- & \\
 {\bf Type} & {\bf Default Initial Value}\\
- & \\
 \hline
- & \\
 \chpl{enum} & first enum constant \\
- & \\
 \hline
- & \\
 \chpl{class} & {\tt nil} \\
- & \\
 \hline
- & \\
 \chpl{record} & default constructed record \\
- & \\
 \hline
- & \\
 \chpl{range} & empty range:  \chpl{(1..0)} \\
- & \\
 \hline
-& \\
 \chpl{domain} & empty range for each dimension \\
-& \\
 \hline
-& \\
 \chpl{array} & default initial values of element types \\
-& \\
 \hline
-& \\
 \chpl{tuple} & default initial values of component types \\
-& \\
 \hline
-& \\
 \chpl{locale} & ordered list of processor ids assigned at job launch \\
-& \\
 \hline
- & \\
 \chpl{file} &  \chpl{(filename = , path = ., mode = r)}\\
 \hline
 \end{tabular}
@@ -618,8 +584,9 @@ A11 => A(block1,block1);
 
 \paragraph{Scans and Reductions}
 
-\subsubsection{Serial Statements}
+\subsubsection{Statements and Expressions}
 
+\paragraph{Serial Statements}
 \begin{center}
 \begin{tabular}{|l|l|l|}
 %\begin{longtable}{|l|l|l|}
@@ -735,7 +702,7 @@ type select ind {
 \end{tabular}
 \end{center}
 
-\subsubsection{Parallel Statements}
+\paragraph{Parallel Statements}
 \begin{center}
 \begin{tabular}{|l|l|l|}
 \hline
@@ -800,8 +767,7 @@ forall ind in D {
 \end{tabular}
 \end{center}
 
-\subsubsection{Expressions}
-
+\paragraph{Expressions}
 \begin{center}
 \begin{tabular}{|l|l|l|}
 \hline
@@ -849,66 +815,108 @@ var half = if (i % 2) then i/2 +1 else i/2;
 \end{tabular}
 \end{center}
 
-\subsubsection{Functions}
+\subsubsection{Functions and Iterators}
 \paragraph{Function Definitions}
-Functions are defined with a name and a list of function
-arguments.  Optionally, intent types, return types and a
-where clause can be specified.
+Functions are defined with the keyword \chpl{def}, a name and a list of function
+arguments.  Optionally, intents and types for the function arguments, return types and 
+a where clause can be specified.  
+
+The Chapel language supports function overloading.  At compile time, function
+resolution will identify the most specific function for each function call from a set
+of candidate functions depending on the number of function arguments, the types 
+specified for the input and return values, and any where clauses.
+
+\begin{example}
+The example below defines a simple function that computes the area of a rectangle.
+The \chpl{areaRect} function is defined to take two function arguments of type
+\chpl{real} and return a value of type \chpl{real}.  If this function is called with 
+function arguments that have a type other than \chpl{real}, it will result in a function
+resolution error at compile time.
 \begin{chapel}
-def area(x:real, y:real): real {
+def areaRect(x:real, y:real): real {
   return x*y;
 }
 \end{chapel}
+\end{example}
 
 \paragraph{Function Intents}
-The intents of function arguments can be specified as \chpl{in},
-\chpl{out} or \chpl{inout}.
+Intents of function arguments specify how an argument can be
+modified during and after the function call. 
+The intents can be specified as \chpl{in}, \chpl{out} or \chpl{inout}.
 
 If the intent is omitted, then the
-argument has a blank intent, copying in the value using the assignment
-operator.
-Arguments with a blank intent cannot be assigned within a function.
-Arrays and domains are an exception.  They are always passed by reference
-and may be modified within a function.
-Domains can be passed only with a blank intent.
+argument has a blank intent, copying in the value using the assignment 
+operator.  Arguments with a blank intent cannot be assigned within a function.
+If the intent of an argument is \chpl{in}, the actual argument is copied 
+to the formal argument and it may be modified within the function.  However, 
+the actual argument at the call site does not reflect any modifications 
+made within the function.  The \chpl{out} intent indicates that the 
+actual argument is ignored when the call is made, but after the
+call the formal argument is assigned to the actual argument at the call site.
+The \chpl{inout} intent indicates that the actual argument be copied to 
+the formal argument and then copied back after the call.
+
+Actual arguments of array and domain types are handled differently when
+they have a blank intent.  In this case, array and domain arguments are 
+passed by reference.  Thus, they can be modified within the function and 
+those modifications are reflected at the call site.  Arrays arguments 
+with non-blank intents are handled according to definition, being copied 
+to and from the formal arguments.  Actual arguments of domain types can
+only have a blank intent.
 
 \paragraph{Generic Functions}
-Generic functions contain formal arguments that do not have
-a specified type.
+The Chapel language supports generic functions, allowing the user
+to define a function without specifying the types of the formal arguments
+or return variables.  A generic function definition can have formal arguments  
+of generic type, formal arguments without a specified type or 
+with a queried type, or formal arguments that are tagged with 
+\chpl{type} or \chpl{param} keywords.  In addition, a function is
+considered to be generic if it contains an array argument with its
+domain or element type unspecified or queried.
+
+\begin{example}
 \begin{chapel}
 def absSum(x:[?D]) {
-  var sum: x.type;
+  var sum: x.eltType;
   for i in D do sum += abs(x(i));
   return sum;
 }
 \end{chapel}
 This routine, \chpl{absSum}, can be called
-with arrays of any type for which an \chpl{abs} function is
-defined.
+with arrays of any element type for which an \chpl{abs} function is
+defined.  Further, this routine can be called with arrays of 
+any domain type, so it can be called with arrays of arbitrary dimension.
+\end{example}
 
-\paragraph{Chapel Standard Functions}
-
-\subsubsection{Iterators}
+\paragraph{Iterators}
 Iterators are defined similarly to functions, except that
 they are defined with the keyword \chpl{iterator} and they
 contain a \chpl{yield} statement.
+Iterators may be called in \chpl{for} and \chpl{forall} loop
+statements.  For each iteration of the loop, a value from the
+iterator is yielded and the body of the loop executed.
+\begin{example}
 \begin{chapel}
 iterator evens(n) {
   for i in 1..n do yield (i,2*i);
 }
-\end{chapel}
-Iterators may be called in \chpl{for} and \chpl{forall} loop
-statements.  For each iteration of the loop, a value from the
-iterator is yielded and the body of the loop executed.
-\begin{chapel}
+
 for (i,i2) in evens(m) {
   x(i) = y(i2);
 }
 \end{chapel}
-
+The above code gives an example of an iterator definition and use.
+The iterator, \chpl{evens} yields a tuple of integers at each iteration.
+\end{example}
 
 \subsubsection{Input and Output}
 \paragraph{File I/O}
+The Chapel language provides a \chpl{file} type for use in reading and
+writing to files.  To read or write from a file, a variable of \chpl{file}
+type must be declared and then assigned the name and path of the file 
+and whether the file is to be read or written.  Methods to open, to close,
+to read and to write from that file can be invoked with this file
+variable.
 
 \paragraph{Chapel Standard I/O Functions}
 Chapel provides built-in functions \chpl{write} and \chpl{writeln}
@@ -916,14 +924,42 @@ to write to \chpl{stdout}, and the built-in function \chpl{read}
 that reads from \chpl{stdin}.
 
 \paragraph{Default I/O Methods for Chapel Types}
-Default \chpl{read} and \chpl{write} methods are provided for all
-Chapel types.
+Default \chpl{read}, \chpl{write}, and \chpl{writeln} methods are 
+provided for all Chapel types.  
 
+\begin{example}
+The following code shows the definition of an arithmetic domain \chpl{D}
+and array \chpl{A}, and calling the \chpl{writeln} function
+to print both variables to standard output.  
+\begin{chapel}
+var D = [1..5, 1..5];
+var A: [D] real;
 
-\subsubsection{Additional Parallel Support}
-\paragraph{Data Distributions}
-\paragraph{Data Locality}
-\paragraph{Parallel vs. Serial Computations}
+writeln("Writing a variable of domain type:");
+writeln(D);
+writeln("Writing a variable of array type:");
+writeln(A);
+\end{chapel}
+
+The output is shown below.  Variables of arithmetic domain type are 
+formatted to print the ranges for each dimension of the domain.  Variables
+of arithmetic array type are formatted to print the values of each row
+separated by a carriage return.
+\begin{commandline}
+Writing a variable of domain type:
+[1..5, 1..5]
+Writing a variable of array type:
+0.0 0.0 0.0 0.0 0.0
+0.0 0.0 0.0 0.0 0.0
+0.0 0.0 0.0 0.0 0.0
+0.0 0.0 0.0 0.0 0.0
+\end{commandline}
+\end{example}
+
+\subsubsection{Parallel Features}
+\paragraph{Data Parallelism}
+\paragraph{Task Parallelism}
+\paragraph{Data Distributions and Locality}
 
 \subsection{Example Chapel Programs}
 
