Combined both genericStack examples into a single example to share the test code.
git-svn-id: http://svn.code.sf.net/p/chapel/code/trunk@10351 3a8e244f-b0f2-452b-bcba-4c88e055c3ca

--- a/test/release/examples/README
+++ b/test/release/examples/README
@@ -6,8 +6,7 @@ This directory contains the following example codes:
 
      beer.chpl              : computes lyrics to "99 bottles of beer"
      blockLU.chpl           : block LU factorization
-     genericStack.chpl      : a generic stack class (linked list implementation)
-     genericStack2.chpl     : another generic stack class (array implementation)
+     genericStack.chpl      : generic stack classes (list- and array-based)
      hello.chpl             : "Hello, world!" program using a config variable
      iterators.chpl         : sample iterators
      jacobi.chpl            : Jacobi iteration
